WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211184
[LFC][TFC] Take row span into account when checking for missing cells
https://bugs.webkit.org/show_bug.cgi?id=211184
Summary
[LFC][TFC] Take row span into account when checking for missing cells
alan
Reported
2020-04-29 08:30:41 PDT
ssia
Attachments
Patch
(2.56 KB, patch)
2020-04-29 08:36 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2020-04-29 08:36:31 PDT
Created
attachment 397963
[details]
Patch
EWS
Comment 2
2020-04-29 10:20:22 PDT
Committed
r260903
: <
https://trac.webkit.org/changeset/260903
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 397963
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-04-29 10:21:16 PDT
<
rdar://problem/62607212
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug