[LFC][TFC] Take row span into account when checking for missing cells https://bugs.webkit.org/show_bug.cgi?id=211184

Reviewed by Antti Koivisto.

The tree builder looks for missing cells in the table grid and fills in the gaps with empty cells.
This patch takes row spanning into account and make sure we don't end up adding an extra, redundant cell.

* layout/layouttree/LayoutTreeBuilder.cpp:
(WebCore::Layout::TreeBuilder::buildTableStructure):


Canonical link: https://commits.webkit.org/224093@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260903 268f45cc-cd09-0410-ab3c-d52691b4dbfc